[package]
name = "parblo-intangbo-m-driver"
version = "0.1.0"
edition = "2024"
exclude = ["study"]

[dependencies]
anyhow = "1.0.100"
evdev-rs = "0.6.3"
nix = { version = "0.30.1", features = ["event", "inotify", "signal"] }
parking_lot = "0.12.4"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
